# abc_sales_objective_approximat

./: .gitignore  CMakeLists.txt  Makefile  README.md  Summary_ABC_Sales.txt  historical_data.txt  simulation_config.txt  simulation_config_back.txt
data/: Z285320_df_features_sku_2024-07-28.txt  Z285320_df_features_sku_norm_2024-07-28.txt  df_features_Z285320_sku_2024-07-22.txt  df_features_Z285320_sku_2024-07-23.txt  df_features_Z285320_sku_2024-07-27.txt  df_features_Z285320_sku_norm.txt  df_features_Z285320_sku_norm_2024-07-22.txt  df_features_Z285320_sku_norm_2024-07-23.txt  df_features_Z285320_sku_norm_2024-07-27.txt  features_sku.txt  mean_values_Z285320_features_sku_2024-07-27.json  simulation_config_initial.txt  simulation_log.txt  statistics_simulations.txt
data/H401391/: H401391_df_features_sku_norm_2024-08-03.txt  H401391_matriz_intervals_df_2024-08-03.csv  H401391_mean_values_features_sku_2024-08-03.json  H401391_std_values_features_sku_2024-08-03.csv  H401391_std_values_features_sku_2024-08-03.json
data/P443799/: P443799_matriz_intervals_df_2024-08-03.csv
data/U391805/: U391805_matriz_intervals_df_2024-08-03.csv  U391805_std_values_features_sku_2024-08-03.csv
data/Z285320/: Z285320_df_features_sku_2024-07-28.txt  Z285320_df_features_sku_2024-08-03.txt  Z285320_df_features_sku_norm_2024-07-28.txt  Z285320_filtered_df_features_sku_2024-08-03.csv  Z285320_matriz_intervals_df_2024-08-03.csv
data/Z449121/: Z449121_matriz_intervals_df_2024-08-03.csv  Z449121_mean_values_features_sku_2024-08-03.json
data_optional/: example_of_parameter_values.xlsx
include/: ABCMethod.h  DataLoader.h  Parameter.h  Simulation.h  SimulationEngine.h
src/: ABCMethod.cpp  DataLoader.cpp  Parameter.cpp  Simulation.cpp  SimulationEngine.cpp  main.cpp
tests/: CMakeLists.txt  tests.cpp
(+47 files in other folders)
